Add report template
Template for church report. Created in Google Docs and saved as html. Only change was to add .break to css for page breaks on <h1> when printing.

--- a/pulsemanager/templates/users/report.html
+++ b/pulsemanager/templates/users/report.html
@@ -28,11 +28,7 @@
 <div class="row">
 
   <div class="col-sm-12">
-    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a>
-    <!-- Your Stuff: Custom user template urls -->
-    <a class="btn btn-primary" href="{% url 'users:report' %}" role="button">Report</a>
-
+   <p>this is the report</p>
   </div>
 
 </div>
