Switch to CSV from JSON.
I couldn't figure out how to properly parse the JSON from Limesurvey. But you can also request CSV which is much easier to get into a DataFrame.

--- a/pulsemanager/templates/base.html
+++ b/pulsemanager/templates/base.html
@@ -77,7 +77,7 @@
       {% endif %}
 
       {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
+        <h3>Welcome to Take Your Church's Pulse</h3>
       {% endblock content %}
 
     </div> <!-- /container -->
