Produce the report as a PDF and open in a new tab.

--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -6,6 +6,12 @@
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type">
   <style>
+    @page {
+        margin-top: 1cm;
+        margin-bottom: 1cm;
+        margin-left: 0mm; 
+        margin-right: 0mm
+     }
     .break {
       page-break-before: always;
     }
