Add country to the User and a few minor report changes.

--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -1633,7 +1633,7 @@
     }
 
     .c9 {
-      color: #ff5722;
+      color: #000000;
       font-weight: 400;
       text-decoration: none;
       vertical-align: baseline;
@@ -1769,6 +1769,7 @@
     }
 
     .c5 {
+      color: #000000;
       padding-top: 16pt;
       padding-bottom: 0pt;
       line-height: 1.0;
@@ -1796,7 +1797,9 @@
 
     .c10 {
       padding: 0;
-      margin: 0
+      margin: 0;
+      padding-left: 2em;
+      text-indent: -2em;
     }
 
     .c19 {
@@ -1948,7 +1951,7 @@
     </span>
   </p>
   <p class="c24 title" id="h.t407xxhvh3jg">
-    <span>Take Your Church&rsquo;s Pulse</span>
+    <span>Take Your <br>Church&rsquo;s Pulse</span>
   </p>
   <p class="c20 subtitle" id="h.i5w5ymi3yyfj">
     <span>Survey Participants: {{responses}}</span>
@@ -2025,7 +2028,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.et3sf72n1rc2">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_1v3kh6brc5zi-0 start" start="1">
     <li class="c2">
@@ -2059,7 +2062,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.k7ai5miled50">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_pxtfgpl3bb5b-0 start" start="1">
     <li class="c2">
@@ -2097,7 +2100,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.gtoeis3t24lc">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_mkc235j8w2n8-0 start" start="1">
     <li class="c2">
@@ -2135,7 +2138,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.hv90q4jq2hl3">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_cwjziw1b7x4r-0 start" start="1">
     <li class="c2">
@@ -2171,7 +2174,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.kmafowy6s9">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_b5fnokb3kpff-0 start" start="1">
     <li class="c2">
@@ -2207,7 +2210,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.4msh59xwk4tv">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_inadkbf5h8dk-0 start" start="1">
     <li class="c2">
@@ -2243,7 +2246,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.7aquxnj9bre7">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_rndy1yfh9h0-0 start" start="1">
     <li class="c2">
@@ -2279,7 +2282,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.98y61qenh3mm">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_hj0dz4rr7jrv-0 start" start="1">
     <li class="c2">
@@ -2315,7 +2318,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.fh87oekk1ode">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_jhjimo1ho6t0-0 start" start="1">
     <li class="c2">
@@ -2351,7 +2354,7 @@
     </span>
   </p>
   <h2 class="c0" id="h.on9gz4k7ad5g">
-    <span class="c9">Question</span>
+    <span class="c9">Questions</span>
   </h2>
   <ol class="c10 lst-kix_e2virmp1r86b-0 start" start="1">
     <li class="c2">
