Added denomination to User

--- a/pulsemanager/templates/users/user_detail.html
+++ b/pulsemanager/templates/users/user_detail.html
@@ -19,7 +19,11 @@
       {% endif %}
 
       {% if object.hierarchy %}
-      <p>{{object.hierarchy.as_p}}</p>
+        <p>{{object.hierarchy.as_p}}</p>
+      {% endif %}
+
+      {% if object.denomination %}
+        <p>{{object.denomination.as_p}}</p>
       {% endif %}
 
       {% if object.country %}
@@ -27,7 +31,7 @@
       {% endif %}
 
       {% if object.langauge %}
-      <p>{{object.language.as_p}}</p>
+        <p>{{object.language.as_p}}</p>
       {% endif %}
       <p>
       <input type="checkbox" onclick="return false" readonly value ={{object.acitvesurvey}} {% if object.acitvesurvey %} checked="checked" {% endif %}  data-toggle="toggle" data-on="Active" data-off="Not Active" data-onstyle="success" data-offstyle="danger">
