Chang the report title color to black.

--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -1663,7 +1663,7 @@
     }
 
     .c13 {
-      color: #0099e8;
+      color: #000000;
       font-weight: 400;
       text-decoration: none;
       vertical-align: baseline;
