--- a/pulsemanager/templates/users/user_detail.html
+++ b/pulsemanager/templates/users/user_detail.html
@@ -35,7 +35,11 @@
       {% endif %}
       <p>
       <input type="checkbox" onclick="return false" readonly value ={{object.acitvesurvey}} {% if object.acitvesurvey %} checked="checked" {% endif %}  data-toggle="toggle" data-on="Active" data-off="Not Active" data-onstyle="success" data-offstyle="danger">
-    </p>
+      <br>
+      <a href="https://tycp.online/index.php/{{ object.get_surveyid }}/lang=en">TYCP English</a>
+      <br>
+      <a href="https://tycp.online/index.php/{{ object.get_surveyid }}/lang=es">TYCP Spanish</a>
+     </p>
     </div>
   </div>
 
