Add explaination page to the repot.
Also beutified the HTML with the ATOM Beutify package.

--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 {% load staticfiles %}
+{% load i18n %}
 
 <html>
+
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type">
   <style>
     @page {
-        margin-top: 1cm;
-        margin-bottom: 1cm;
-        margin-left: 0mm;
-        margin-right: 0mm
-     }
+      margin-top: 1cm;
+      margin-bottom: 1cm;
+      margin-left: 0mm;
+      margin-right: 0mm
+    }
+
     .break {
       page-break-before: always;
     }
@@ -2018,6 +2021,18 @@
     <span class="c15">
     </span>
   </p>
+  <h1 class="break c5" id="h.bh8dvodnyfba"><span class="c23">INTERPRETING THE RESULTS <br> FROM THE TYCP TOOL</span></h1>
+  <p class="c8 c16"><span class="c17"></span></p>
+  <p class="c2"><span class="c3">To make the information from the survey easy to access and interpret, the online version has expressed the results graphically. For each vital sign, there is a bar graph for each question. This enables the user to quickly identify highs and lows. There is a similar graph, the radar graph, for all of the signs. These graphs utilize the common point scale from 1 to 10, where 10 represents total agreement with the descriptive phrase and 1 represents complete disagreement.</span></p>
+  <p class="c8 c16"><span class="c10"></span></p>
+  <p class="c2"><span class="3">Any scores that fall above a 7, the green line, are a cause for celebration. While there is always room for improvement, these sections should be celebrated as strengths that can be used to further bear witness to the Kingdom of God. Praise God for these signs of health. </span></p>
+  <p class="c8 c16"><span class="c12"></span></p>
+  <p class="c2"><span class="c3">For scores that fall between 3 and 7, these areas should be considered for improvement through healthy conversations with the church leadership. There may exist simple strategies to make your church healthier or it might require deeper conversations of discernment.</span></p>
+  <p class="c8 c16"><span class="c12"></span></p>
+  <p class="c2"><span class="c3">Anything that scored a 3 or less, below the red line, is potentially in crisis. These areas are most likely hurting your church and should be evaluated for how to improve them to strengthen the church&rsquo;s health. </span></p>
+  <p class="c8 c16"><span class="c3"></span></p>
+  <p class="c2"><span class="c3">For further guidance, refer to the Introduction to the Take Your Church&rsquo;s Pulse Tool manual on www.TakeYourChurchsPulse.org. </span></p>
+
   <h1 class="break c5" id="h.c3yklfr3tmfs">
     <span>Vision</span>
   </h1>
