Add page numbers to the report.

--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -7,12 +7,21 @@
 
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+
+  <style>
+    @page {
+      @bottom-right {
+        content: "Page " counter(page) " of " counter(pages) " ";
+      }
+    }
+  </style>
+
   <style>
     @page {
       margin-top: 1cm;
       margin-bottom: 1cm;
-      margin-left: 0mm;
-      margin-right: 0mm
+      margin-left: 5mm;
+      margin-right: 5mm
     }
 
     .break {
@@ -1940,6 +1949,7 @@
 </head>
 
 <body class="c22">
+
   <div>
     <p class="c16 c23">
       <span class="c11">
