Add Survey ID to report.

--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -1967,7 +1967,8 @@
     <span>Take Your <br>Church&rsquo;s Pulse</span>
   </p>
   <p class="c20 subtitle" id="h.i5w5ymi3yyfj">
-    <span>Survey Participants: {{responses}}</span>
+    <span>Survey ID: {{sid}}</span>
+    <span>Participants: {{responses}}</span>
   </p>
   <p class="c12">
     <span class="c3">
