Make Radar Graph label match the other labels in the report.

--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -2425,7 +2425,7 @@
     </span>
   </p>
   <h1 class="break c5" class="c5 c19" id="h.w84a75hfx3pb">
-    <span class="c1 c17">Radar Graph</span>
+    <span>Radar Graph</span>
   </h1>
   <p class="c8">
     <span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 468.00px;">
