--- a/pulsemanager/templates/base.html
+++ b/pulsemanager/templates/base.html
@@ -1,4 +1,6 @@
-{% load static i18n %}<!DOCTYPE html>
+<!DOCTYPE html>
+{% load static i18n %}
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -38,10 +40,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'home' %}">{% trans "Home" %} <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'about' %}">About</a>
+              <a class="nav-link" href="{% url 'about' %}">{% trans "About" %}</a>
             </li>
             {% if request.user.is_authenticated %}
               <li class="nav-item">
@@ -77,7 +79,7 @@
       {% endif %}
 
       {% block content %}
-        <h3>Welcome to Take Your Church's Pulse</h3>
+        <h3>{% trans "Welcome to Pulse Manager" %}</h3>
       {% endblock content %}
 
     </div> <!-- /container -->
