--- a/pulsemanager/templates/users/reports/rptemplate/report.html
+++ b/pulsemanager/templates/users/reports/rptemplate/report.html
@@ -1964,7 +1964,7 @@
     </span>
   </p>
   <p class="c24 title" id="h.t407xxhvh3jg">
-  <span>{% trans "Take Your Church's' Pulse" %}</span>
+  <span>{% trans "Take Your Church's Pulse" %}</span>
   </p>
   <p class="c20 subtitle" id="h.i5w5ymi3yyfj">
     <span>{% trans "Survey ID" %}: {{sid}}</span>
