Add Spanish logo.

--- a/pulsemanager/templates/users/reports/tycpreport/report.html
+++ b/pulsemanager/templates/users/reports/tycpreport/report.html
@@ -1959,7 +1959,7 @@
   </div>
   <p class="c8">
     <span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 461.00px; height: 127.00px;">
-      <img alt=""src="{{STATIC_URL}}images/mmn_logo_en.png" style="width: 237.00px; height: 131.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+      <img alt=""src='{{STATIC_URL}}images/{% trans "mmn_logo_en.png" %}' style="width: 237.00px; height: 131.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
         title="">
     </span>
   </p>
