Change welcome message.

--- a/pulsemanager/templates/base.html
+++ b/pulsemanager/templates/base.html
@@ -79,7 +79,8 @@
       {% endif %}
 
       {% block content %}
-        <h3>{% trans "Welcome to Pulse Manager" %}</h3>
+        <h3>{% trans "<small>Welcome to</small> <big>Taking Your Churche's Pulse</big> <small>Online Diagnostic Survey</small>" %}</h3>
+
       {% endblock content %}
 
     </div> <!-- /container -->
