--- a/pulsemanager/templates/pages/home.html
+++ b/pulsemanager/templates/pages/home.html
@@ -4,5 +4,7 @@
 {% load i18n %}
 
 {% block content %}
+<h3>{% trans "<small>Welcome to</small> <big>Take Your Church's Pulse</big> <small>Online Diagnostic Survey</small>" %}</h3>
+<br>
 <img src='{{STATIC_URL}}images/{% trans "TCYPPulseManagerHomepage-en.gif" %}' alt="TYCP" class="img-fluid">
 {% endblock %}
